syntax = "proto3";

package fleetspeak.server;

import "fleetspeak/src/server/proto/fleetspeak_server/services.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/google/fleetspeak/fleetspeak/src/server/proto/fleetspeak_server";

// Describes a server's configuration. If unset, all values default to values
// reasonable for a unit test or small installation. Larger installations may
// need to tune these.
message ServerConfig {
  // The collection of services that this server should include.
  repeated ServiceConfig services = 1;

  // The collection of batched services that this server should include.
  repeated BatchedServiceConfig batched_services = 3;

  // The approximate time to wait between checking for new broadcasts. If unset,
  // a default of 1 minute is used.
  google.protobuf.Duration broadcast_poll_time = 2;
}
